--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,14 @@ nav {
 
 }
 
+/* resume styling */
+.skills {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
 /* footer styling */
 footer .icons {
   display: flex;
