--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500;6..96,600;6..96,700;6..96,800;6..96,900&family=DM+Sans:wght@400;500&family=DM+Serif+Display&family=DM+Serif+Text&family=Didact+Gothic&family=Nanum+Myeongjo&family=Outfit:wght@100;200;300&family=Silkscreen&display=swap');
+
 /* nav styling */
 nav {
   display: flex;
@@ -17,6 +18,11 @@ nav {
 
 .avatar {
   max-width: 50%;
+}
+
+.landing-skills {
+  font-family: 'Outfit', sans-serif;
+  font-weight: lighter;
 }
 
 .about p {
