--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,11 @@ nav {
 }
 
 /* resume styling */
+.the-u {
+  font-family: 'DM Serif Display', serif;
+
+}
+
 .res-head {
   font-family: 'Outfit', sans-serif;
   font-weight: lighter;
