--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,6 +48,11 @@ nav {
 
 }
 
+/* services */
+.services {
+  font-family: 'Didact Gothic', sans-serif;
+}
+
 /* resume styling */
 .the-u {
   font-family: 'DM Serif Display', serif;
